Shop.WebApi/k8s/ingress-whoami.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: webapi-demo
spec:
  ingressClassName: traefik
  rules:
    - host: whoami.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
